compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_type_duplicate.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 213
expression: "import one.{One, type One}\n\npub fn main() -> One {\n  todo\n}\n"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{One, type One}
  │             ^^^

The module `one` does not have a `One` value.

